# task-analyzer

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  diesel.toml  flake.nix
assets/: tailwind.css
data_processing/: Cargo.toml
data_processing/src/: activity_entry.rs  lib.rs  schema.rs
data_processing/src/parsing/: mod.rs  task_parser.rs
data_processing/src/parsing/obsidian/: obsidian.rs
egui_app/: Cargo.toml
egui_app/src/: app_settings.rs  jira_debug_window.rs  main.rs  routes.rs  side_menu.rs
egui_app/src/views/: home_view.rs  mod.rs  settings_view.rs
migrations/2025-08-30-225146_create_task_sources/: down.sql  up.sql
parser/: Cargo.toml
parser/src/: lib.rs  task_parser.rs
parser/src/obsidian/: mod.rs  obsidian.rs  obsidian_parsing_tests.rs
src/: main.rs
src/backend/: mod.rs
src/backend/parsing/: mod.rs  task_parser.rs
src/backend/parsing/obsidian/: mod.rs  obsidian.rs  obsidian_parsing_tests.rs
src/backend/parsing/obsidian/obsidian_parsing_test_files/: simple.md
src/components/: log_row.rs  mod.rs
src/views/: home.rs
