[package]
name = "task-analyzer"
version = "0.1.0"
authors = ["Joonas Kajava <5013522+JoonasKajava@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
diesel = { version = "2.2.12", features = ["sqlite"] }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dirs = "6.0.0"
markdown = "1.0.0"
nom = "8.0.0"
regex = "1.11.2"
thiserror = "2.0.16"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
