[package]
name = "task-analyzer"
version = "0.1.0"
authors = ["Joonas Kajava <5013522+JoonasKajava@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
diesel = { version = "2.2.12", features = ["sqlite"] }
dirs = "6.0.0"
eframe = "0.32.2"
egui = "0.32.2"
env_logger = { version = "0.11.8", features = ["humantime", "auto-color"] }
markdown = "1.0.0"
nom = "8.0.0"
regex = "1.11.2"
thiserror = "2.0.16"
