[package]
name = "egui_app"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.12", features = ["sqlite"] }
dirs = "6.0.0"
eframe = "0.32.2"
egui = "0.32.2"
env_logger = { version = "0.11.8", features = ["humantime", "auto-color"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
parser = {path = "../parser"}
