[package]
name = "egui_app"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.12", features = ["sqlite"] }
dirs = "6.0.0"
eframe = "0.32.2"
egui = "0.32.2"
env_logger = { version = "0.11.8", features = ["humantime", "auto-color"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
data_processing = {path = "../data_processing"}
egui_animation = "0.9.0"
egui_router = "0.5.0"
egui_inbox = "0.9.0"
log = "0.4.28"
egui-phosphor = "0.10.0"
egui-probe = { version = "0.9.0", features = ["derive"] }
